# PolyLambo

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-05-05-strategy-refinement.md
docs/superpowers/specs/: 2026-05-04-strategy-tui-refinement-design.md  2026-05-05-strategy-refinement-design.md
migrations/: 001_trades.sql
src/: binance.rs  clob.rs  config.rs  db.rs  engine.rs  gamma.rs  lib.rs  main.rs  poly_ws.rs  state.rs
src/tui/: mod.rs  widgets.rs
tests/: clob_mock_test.rs  engine_test.rs  gamma_test.rs
