[package]
name = "eth5m-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "eth5m_bot"
path = "src/lib.rs"

[[bin]]
name = "eth5m-bot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
polyfill-rs = { git = "https://github.com/floor-licker/polyfill-rs.git" }
rust_decimal = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
ratatui = "0.26"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-retry = "0.3"
futures-util = "0.3"
tracing-appender = "0.2"
